--- a/stories/Footer.stories.mdx
+++ b/stories/Footer.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit";
 import { withWebComponentsKnobs } from "storybook-addon-web-components-knobs";
 import { withKnobs, text, number } from "@storybook/addon-knobs";
-import { FooterElement } from "../lib";
+import { FooterElement, LinksArray } from "../lib/Footer";
 
 <Meta
   title="Components/Footer"
