--- a/stories/Sample.stories.mdx
+++ b/stories/Sample.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit";
 import { withWebComponentsKnobs } from "storybook-addon-web-components-knobs";
 import { withKnobs, text, number } from "@storybook/addon-knobs";
-import { ButtonElement } from "../lib";
+import { ButtonElement } from "../lib/Button";
 
 <Meta
   title="Components/Sample-mdx"
