--- a/stories/Footer.stories.mdx
+++ b/stories/Footer.stories.mdx
@@ -2,12 +2,11 @@ import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit";
 import { withWebComponentsKnobs } from "storybook-addon-web-components-knobs";
 import { withKnobs, text, number } from "@storybook/addon-knobs";
-import { FooterElement, LinksArray } from "../lib/Footer";
+import  "../lib/Footer";
 import { partDescription } from "./common";
 
 <Meta
   title="Components/Footer"
-  component={FooterElement}
   argTypes={{
     title: {
       control: "text",
