--- a/stories/Masthead.stories.mdx
+++ b/stories/Masthead.stories.mdx
@@ -36,6 +36,70 @@ All .gov.sg digital services shall adopt The Official Government Banner for ever
 ```jsx
 import { MastheadElement } from "@govtechsg/sgds-web-component";
 ```
-
 <ArgsTable story="Basic" />
 
+## CSS Custom Properties
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Default Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <code>--masthead-font-family</code>
+      </td>
+      <td>Sets font family for masthead</td>
+      <td>system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif</td>
+    </tr>
+    <tr>
+      <td>
+        <code>--masthead-text-color</code>
+      </td>
+      <td>
+        Sets overall text color 
+      </td>
+      <td>hsl(0, 0%, 28%)</td>
+    </tr>
+    <tr>
+      <td>
+        <code>--masthead-link-color</code>
+      </td>
+      <td>
+        Sets link color for  "How to identify?" and "Trusted Site"
+      </td>
+      <td>hsl(222, 63%, 50%)</td>
+    </tr>
+    <tr>
+      <td>
+        <code>--masthead-link-color-hover</code>
+      </td>
+      <td>
+        Sets link hover color for  "How to identify?" and "Trusted Site"
+      </td>
+      <td>hsl(221, 64%, 55%)</td>
+    </tr>
+    <tr>
+      <td>
+        <code>--masthead-mobile-font-size</code>
+      </td>
+      <td>
+        Sets the font size for viewport width 1024px and below
+      </td>
+      <td>0.6875rem</td>
+    </tr>
+    <tr>
+      <td>
+        <code>--masthead-crest-color</code>
+      </td>
+      <td>
+        Sets the Singapore Lion Head crest color
+      </td>
+      <td>rgb(239, 51, 32)</td>
+    </tr>
+  </tbody>
+</table>
