style(masthead): add mobile padding-x custom properties

--- a/stories/Masthead.stories.mdx
+++ b/stories/Masthead.stories.mdx
@@ -85,6 +85,15 @@ import { MastheadElement } from "@govtechsg/sgds-web-component";
     </tr>
     <tr>
       <td>
+        <code>--masthead-mobile-padding-x</code>
+      </td>
+      <td>
+        Sets the padding left and right for viewport width 1024px and below
+      </td>
+      <td>1.25rem</td>
+    </tr>
+    <tr>
+      <td>
         <code>--masthead-mobile-font-size</code>
       </td>
       <td>
