docs(mainnav): add api table

--- a/stories/SideNav.stories.mdx
+++ b/stories/SideNav.stories.mdx
@@ -24,7 +24,7 @@ import { partDescription } from "./common";
       },
     },
     default: {
-      description: "default slot for SideNavItem element",
+      description: "default slot of SideNavElement. Pass in SideNavItem elements here",
       table: {
         category: "slot: SideNavElement",
       },
