--- a/stories/MainNav.stories.mdx
+++ b/stories/MainNav.stories.mdx
@@ -9,30 +9,109 @@ import { partDescription } from "./common";
   title="Components/MainNav"
   argTypes={{
     expand: {
-      control: "text",
+      control: "select",
+      options: ["always", "never", "sm", "md", "lg", "xl", "xxl"],
       defaultValue: "lg",
       description:
-        "Allow sidenav items to stay open when another item is opened",
+        "The breakpoint, below which, the Navbar will collapse. When `always` the Navbar will always be expanded regardless of screen size. When `never`, the Navbar will always be collapsed",
       table: {
-        category: "props: SideNavElement",
+        category: "props: MainNavElement",
         defaultValue: { summary: "lg" },
         type: {
           summary: "string",
         },
       },
     },
+    brandHref: {
+      control: "text",
+      defaultValue: "",
+      description: "The href link for brand logo",
+      table: {
+        defaultValue: { summary: "" },
+        category: "props: MainNavElement",
+        type: { summary: "string" },
+      },
+    },
+    collapseId: {
+      control: "text",
+      description:
+        "Forwards to id attribute of div.collapse and aria-controls attribute of toggler button in MainNavElement. By default, MainNavElement auto-generates a unique id. Override the default id by specifiying your own",
+      table: {
+        category: "props: MainNavElement",
+        type: {
+          summary: "string",
+        },
+      },
+    },
+    // MainNavElement slots
+    default: {
+      description:
+        "default slot of MainNavElement. Pass in MainNavItem elements here",
+      table: {
+        category: "slot: MainNavElement",
+      },
+    },
+    brand: {
+      description:
+        "Brand slot of MainNavElement. Pass in brand logo or img here",
+      table: {
+        category: "slot: MainNavElement",
+      },
+    },
+    "non-collapsible": {
+      description: "Elements in this slot will not be collapsed",
+      table: {
+        category: "slot: MainNavElement",
+      },
+    },
+    // MainNavItem props
+    active: {
+      control: "boolean",
+      description:
+        "when true, sets the active stylings of .nav-link",
+      table: {
+        category: "props: MainNavItem",
+        defaultValue: { summary: false },
+        type: {
+          summary: "boolean",
+        },
+      },
+    },
+      href: {
+      control: "text",
+      description:
+        "Href attribute for anchor element in MainNavItem",
+      table: {
+        defaultValue: { summary: "" },
+        category: "props: MainNavItem",
+        type: {
+          summary: "string",
+        },
+      },
+    },
+    defaultMNI: {
+      name: "default",
+      description: "default slot for MainNavItem element",
+      table: {
+        category: "slot: MainNavItem",
+      },
+    },
   }}
 />
 
-export const Template = ({ expand }) => {
+export const Template = ({ expand, brandHref, collapseId, active, href }) => {
   return html`
-    <mainnav-element expand=${expand}>
+    <mainnav-element
+      .expand=${expand}
+      .brandHref=${brandHref}
+      .collapseId=${collapseId}
+    >
       <img
         width="130"
         src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg"
         slot="brand"
       />
-      <mainnav-item href="#">Home</mainnav-item>
+      <mainnav-item .active=${active} .href=${href}>Home (argsTable controlled) </mainnav-item>
       <mainnav-item href="#">About</mainnav-item>
     </mainnav-element>
   `;
@@ -52,10 +131,9 @@ _Example is using shoelace's icon. See [here](https://shoelace.style/components/
 
 ```jsx
 import {
-  SideNavElement,
-  SideNavLink,
-  SideNavItem,
-} from "@govtechsg/sgds-web-component/SideNav";
+  MainNavElement,
+  MainNavItem,
+} from "@govtechsg/sgds-web-component/MainNav";
 ```
 
 <ArgsTable story="Basic" />
