--- a/stories/MainNav.stories.mdx
+++ b/stories/MainNav.stories.mdx
@@ -113,6 +113,12 @@ export const Template = ({ expand, brandHref, collapseId, active, href }) => {
         >Home (argsTable controlled)
       </mainnav-item>
       <mainnav-item href="#">About</mainnav-item>
+      <dev-console-widget
+        slot="non-collapsible"
+        iconColor="black"
+        iconWidth="28px"
+        iconHeight="28px"
+      ></dev-console-widget>
     </mainnav-element>
   `;
 };
@@ -120,12 +126,9 @@ export const Template = ({ expand, brandHref, collapseId, active, href }) => {
 # MainNavElement
 
 <Canvas>
-  <Story name="Basic">
-    {Template.bind({})}
-  </Story>
+  <Story name="Basic">{Template.bind({})}</Story>
 </Canvas>
 
-_Example is using shoelace's icon. See [here](https://shoelace.style/components/icon)_
 
 ## API
 
@@ -140,6 +143,6 @@ import {
 
 ## CSS Custom Properties
 
-| Name                         | Description                                                                                                   |
-| ---------------------------- | ------------------------------------------------------------------------------------------------------------- |
+| Name                         | Description                                                                                                      |
+| ---------------------------- | ---------------------------------------------------------------------------------------------------------------- |
 | `--mainnav-item-theme-color` | Sets color of hovered/active text and bottom-border of`<mainnav-item/>` Default to sgds primary color (#5925DC). |
