test(mainnav): add test for mainnav-element and mainnav-item

--- a/stories/MainNav.stories.mdx
+++ b/stories/MainNav.stories.mdx
@@ -18,7 +18,7 @@ import { partDescription } from "./common";
         category: "props: MainNavElement",
         defaultValue: { summary: "lg" },
         type: {
-          summary: "string",
+          summary: "MainNavExpandSize",
         },
       },
     },
@@ -136,6 +136,7 @@ export const Template = ({ expand, brandHref, collapseId, active, href }) => {
 import {
   MainNavElement,
   MainNavItem,
+  MainNavExpandSize
 } from "@govtechsg/sgds-web-component/MainNav";
 ```
 
