--- a/stories/Masthead.stories.mdx
+++ b/stories/Masthead.stories.mdx
@@ -18,10 +18,10 @@ export const Template = ({
   fluid
 }) =>
   html`
-    <masthead-element .fluid=${fluid}></masthead-element>
+    <sgds-masthead .fluid=${fluid}></sgds-masthead>
   `;
 
-# MastheadElement
+# SgdsMasthead
 
 All .gov.sg digital services shall adopt The Official Government Banner for every page in the digital service and be placed at the top of the page.
 
@@ -34,7 +34,7 @@ All .gov.sg digital services shall adopt The Official Government Banner for ever
 ## API
 
 ```jsx
-import { MastheadElement } from "@govtechsg/sgds-web-component";
+import { SgdsMasthead } from "@govtechsg/sgds-web-component";
 ```
 <ArgsTable story="Basic" />
 
